[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email_triage"
version = "1.0.0"
description = "Email Triage - OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core",
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn"
]